# oclus-server

./: .gitignore  Cargo.toml  README.md  compose.yaml  docker-compose.yaml
common/: Cargo.toml  README.md
crates/server/: Cargo.toml  config.yaml
crates/server/migrations/: 0000_create_users_table.sql  0001_create_pre_registration_table.sql
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/api/: error.rs  mod.rs
crates/server/src/api/middleware/: validation.rs
crates/server/src/api/route/: mod.rs
crates/server/src/api/route/user/: register.rs  registration.rs
crates/server/src/db/: mod.rs
crates/server/src/db/repo/: mod.rs  user.rs
crates/server/src/infra/db/: mod.rs
crates/server/src/infra/db/repo/: user.rs
crates/server/src/model/: user.rs
crates/server/src/model/user/: mod.rs  registration.rs
crates/server/src/service/: mod.rs  user.rs
crates/server/src/utils/: serde.rs
crates/server/tests/: registration.rs
crates/server/tests/shared/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  request.rs
server/: Cargo.toml  config.yaml
server/src/: config.rs  lib.rs  main.rs
server/src/domain/user/: mod.rs  repo.rs  service.rs
server/src/domain/user/model/: auth.rs  user.rs
server/src/infra/: db.rs  mod.rs
server/src/infra/repo/: mod.rs
src/: config.rs  lib.rs  main.rs
