[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0" }
log = { version = "0.4", features = ["serde"] }
simplelog = { version = "0.12" }
actix-web = { version = "4.9" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
