[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
log = { version = "0.4" }
env_logger = { version = "0.11" }

actix-web = { version = "4.9" }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
base64 = { version = "0.22" }
validator = { version = "0.19", features = ["derive"] }

totp-rs = { version = "5.6" }
jsonwebtoken = { version = "9.3" }