[package]
name = "oclus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2.0" }
anyhow = { version = "1.0" }
log = { version = "0.4", features = ["serde"] }
simplelog = { version = "0.12" }

actix-web = { version = "4.9" }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0" }
base64 = { version = "0.22" }
validator = { version = "0.19", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }

totp-rs = { version = "5.6" }
jsonwebtoken = { version = "9.3" }
sha2 = { version = "0.10" }
srp = { version = "0.6" }

[dev-dependencies]
rand = { version = "0.8" }
uuid = { version = "1.11", features = ["v4"] }
